Slight responsive fix to horizontal scroll projects

--- a/css/media.css
+++ b/css/media.css
@@ -190,16 +190,6 @@ h1.welcome-description {
 	padding-top: 0;
 }
 
-.scrolling-wrapper-flexbox {
-  padding-left: calc(8%);
-}
-
-.scrolling-wrapper-flexbox .selected-work-item {
-    margin-right: 12px;
-	margin-top: 0 !important;
-	width: 70%;
-}
-
 .scrolling-wrapper-flexbox .selected-work-item:last-child {
 	padding-right: 4% !important;
 }
@@ -248,7 +238,6 @@ h1.welcome-description {
 
 /* Creating horizontal scroll */
 
-
 .scrolling-wrapper-flexbox {
   display: flex;
   flex-wrap: nowrap;
@@ -273,9 +262,11 @@ h1.welcome-description {
 
 .scrolling-wrapper-flexbox .selected-work-item {
 	flex: 0 0 auto;
-    margin-right: 30px;
+    margin-right: 15px;
     /*max-width: 500px;*/
-    width: 62.5%;
+	margin-right: 12px;
+	margin-top: 0 !important;
+	width: 62.5%;
 }
 
 
@@ -513,7 +504,7 @@ p.phrasing-step {
 @media screen and (max-width: 435px) {
 
 .scrolling-wrapper-flexbox .selected-work-item {
-	width: 90%;
+	width: 85%;
 }
 
 }
